--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-.bash_logout                                                     
+.bash_logout
+/README.md                                                     
